--- a/public/index.html
+++ b/public/index.html
@@ -515,7 +515,7 @@
                                 </div>
                                 <div class="input-group">
                                     <label class="input-label">Reference</label>
-                                    <input type="text" name="ref_value" class="input-field" value="ABCD1234">
+                                    <input type="text" name="ref_value" class="input-field" placeholder="e.g. ABCD1234">
                                 </div>
                             </div>
                         </div>
