update zip code issue

--- a/public/index.html
+++ b/public/index.html
@@ -312,7 +312,7 @@
                                     <div class="input-group">
                                         <label class="input-label">Company Name</label>
                                         <input type="text" name="dest_company" class="input-field"
-                                            value="BCIC Swiss GmbH">
+                                            placeholder="Recipient Company">
                                     </div>
                                     <div class="input-group">
                                         <label class="input-label">Address *</label>
@@ -322,12 +322,13 @@
                                     <div class="form-row">
                                         <div class="input-group">
                                             <label class="input-label">Zip Code</label>
-                                            <input type="text" name="dest_zip" class="input-field" value="6340">
+                                            <input type="text" name="dest_zip" class="input-field"
+                                                placeholder="e.g. 1234">
                                         </div>
                                         <div class="input-group">
                                             <label class="input-label">City *</label>
-                                            <input type="text" name="dest_city" class="input-field" value="Baar"
-                                                required>
+                                            <input type="text" name="dest_city" class="input-field"
+                                                placeholder="Recipient City" required>
                                         </div>
                                     </div>
                                     <div class="input-group">
