--- a/public/index.html
+++ b/public/index.html
@@ -266,13 +266,13 @@
                                 style="font-size: 0.9rem; font-weight: 700; margin-bottom: 1rem; color: var(--text-muted); text-transform: uppercase; letter-spacing: 0.05em;">
                                 Not Sure About the Size?</div>
                             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
-                                <button class="btn-preset" onclick="setBox(32,24,3)">A4
+                                <button type="button" class="btn-preset" data-l="32" data-w="24" data-h="3">A4
                                     Envelope 32X24X3</button>
-                                <button class="btn-preset" onclick="setBox(23,14,5)">Two
+                                <button type="button" class="btn-preset" data-l="23" data-w="14" data-h="5">Two
                                     Books 23X14X5</button>
-                                <button class="btn-preset" onclick="setBox(35,20,15)">Shoe
+                                <button type="button" class="btn-preset" data-l="35" data-w="20" data-h="15">Shoe
                                     Box 35X20X15</button>
-                                <button class="btn-preset" onclick="setBox(75,35,35)">Moving
+                                <button type="button" class="btn-preset" data-l="75" data-w="35" data-h="35">Moving
                                     Box 75X35X35</button>
                             </div>
                         </div>
